ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /seq(/|$)(.*)
        backend:
          service:
            name: seq-service
            port:
              number: 80
      - pathType: Prefix
        path: /(/*)(.*)
        backend:
          service:
            name: new-lake-api-service            
            port:
              number: 5001
